# data-manipulation

./: .cursorignore  .cursorrules  .gitattributes  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.adoc  README.md  RELEASE.md  build.sh  conftest.py  environment.yml  environment38.yml  index.html  install_packages.sh  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh
api/: index.html
api/base/: index.html
api/beautifulsoup_/: index.html
api/boto3_/: index.html
api/cryptography_/: index.html
api/django_/: index.html
api/geopandas_/: index.html
api/kerberos_/: index.html
api/mysql_connector_python_/: index.html
api/pandas_/: index.html
api/polars_/: index.html
api/postgres_/: index.html
api/pyspark_/: index.html
api/smtplib_/: index.html
api/sqlalchemy_/: index.html
changelog/: index.html
commands/: index.html
data_manipulation/: __init__.py  _version.py  base.py  beautifulsoup.py  beautifulsoup_.py  boto3_.py  cryptography_.py  django.py  django_.py  flask_.py  geopandas.py  geopandas_.py  kerberos_.py  mysql_connector_python_.py  openldap_.py  pandas.py  pandas_.py  polars_.py  postgres_.py  prometheus_.py  psycopg2.py  psycopg2_.py  psycopg_.py  pyspark.py  pyspark_.py  smtplib_.py  sqlalchemy_.py
data_manipulation/base/: __init__.py  base_.py
data_manipulation/beautifulsoup/: __init__.py  beautifulsoup_.py
data_manipulation/data_types/: __init__.py  string_.py
data_manipulation/django/: __init__.py  django_.py
data_manipulation/geopandas/: __init__.py  geopandas_.py
data_manipulation/iceberg/: __init__.py  catalog.py  ingest.py  ledger.py
data_manipulation/pandas/: __init__.py  pandas_.py
data_manipulation/psycopg2/: __init__.py  psycopg2_.py
data_manipulation/pyspark/: __init__.py  pyspark_.py
data_manipulation/visualization/: __init__.py  visualize_.py
docs/: Makefile  README.adoc  api.md  commands.md  conf.py  data_manipulation.base.rst  data_manipulation.beautifulsoup.rst  data_manipulation.data.rst  data_manipulation.features.rst  data_manipulation.geopandas.rst  data_manipulation.psycopg2.rst  data_manipulation.pyspark.rst  data_manipulation.rst  environment.yml  getting-started.md  hooks.py  index.html  index.md  index.rst  make.bat
docs/_build/doctrees/: commands.doctree  data_manipulation.base.doctree  data_manipulation.beautifulsoup.doctree  data_manipulation.data.doctree  data_manipulation.data_types.doctree  data_manipulation.django.doctree  data_manipulation.doctree  data_manipulation.features.doctree  data_manipulation.geopandas.doctree  data_manipulation.models.doctree  data_manipulation.pandas.doctree  data_manipulation.psycopg2.doctree  data_manipulation.pyspark.doctree  data_manipulation.visualization.doctree  environment.pickle  getting-started.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  commands.html  data_manipulation.base.html  data_manipulation.beautifulsoup.html  data_manipulation.data.html  data_manipulation.data_types.html  data_manipulation.django.html  data_manipulation.features.html  data_manipulation.html  (+14 more)
docs/api/: base.md  beautifulsoup_.md  boto3_.md  cryptography_.md  django_.md  geopandas_.md  kerberos_.md  mysql_connector_python_.md  pandas_.md  polars_.md  postgres_.md  pyspark_.md  smtplib_.md  sqlalchemy_.md
getting-started/: index.html
notebooks/: pandas_common.ipynb  pandas_common.py  pyspark_common.ipynb  pyspark_common.py
search/: search_index.json
src/data_types/: __init__.py  string_.py
src/pandas/: pandas_.py
src/psycopg2/: psycopg2_.py
src/pyspark/: pyspark_.py
tests/: conftest.py  test_base.py  test_beautifulsoup.py  test_boto3.py  test_cryptography.py  test_django.py  test_iceberg.py  test_kerberos.py  test_mysql.py  test_openldap.py  test_pandas.py  test_postgres.py  test_pyspark.py  test_smtplib.py  test_sqlalchemy.py
(+41 files in other folders)
