[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_manipulation"
dynamic = ["version"]
description = "Powerful data manipulation"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Shawn Ng", email = "shawn.coding.acc@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "beautifulsoup4",
    "boto3",
    "cryptography",
    "django",
    "flask",
    "geopandas",
    "ipython",
    "loguru",
    "mysql-connector-python",
    "numpy",
    "pandas",
    "psycopg",
    "pyspark",
    "python-dotenv",
    "sqlalchemy",
]

[project.urls]
Homepage = "https://github.com/shawnngtq/data-manipulation"

[tool.setuptools.packages.find]
include = ["data_manipulation", "data_manipulation.*"]

[tool.setuptools_scm]
version_file = "data_manipulation/_version.py"
fallback_version = "0.0.0"
