[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_manipulation"
dynamic = ["version"]
description = "Powerful data manipulation"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Shawn Ng", email = "shawn.coding.acc@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "beautifulsoup4",
    "boto3",
    "cryptography",
    "flask",
    "ipython",
    "loguru",
    "mysql-connector-python",
    "numpy",
    "pandas",
    "polars",
    "psycopg",
    "pyiceberg",
    "pyspark",
    "python-dotenv",
    "sqlalchemy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/shawnngtq/data-manipulation"

[tool.setuptools.packages.find]
include = ["data_manipulation", "data_manipulation.*"]

[tool.setuptools_scm]
version_file = "data_manipulation/_version.py"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests", "data_manipulation"]
addopts = "--doctest-modules --import-mode=importlib"
pythonpath = ["."]
norecursedirs = ["site", "docs", "build", "dist", "*.egg-info", ".git", ".venv"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
markers = [
    "spark: requires a local PySpark session",
    "integration: requires an external service (DB/AWS/LDAP/SMTP/Kerberos/network)",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
select = [
    "E",        # pycodestyle
    "F",        # Pyflakes
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "I",        # isort
]
ignore = [
    "E402",     # module-import-not-at-top-of-file
    "E501",     # line-too-long
    "F401",     # unused-import
    "F403",     # undefined-local-with-import-star
    "F405",     # undefined-local-with-import-star-usage
    "UP018",    # native-literals
]
